# FalseSensorsROS

./: README.md
src/: CMakeLists.txt
src/src/: fake_camera.py
src2/: package.xml
src2/config/: camera_params.yaml  lidar_params.yaml
src2/launch/: main.py
src2/src/: fake_lidar.py
