<?xml version="1.0"?>
<package format="2">
  <name>false_sensors</name>
  <version>0.0.1</version>
  <description>Fake sensor nodes for testing in ROS2</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
